# wb_franchise_api_client

./: .gitignore  README.md  pyproject.toml
src/: __init__.py  api_client.py  api_config.py
src/models/: AccountData.py  OfficeSpeed.py  OfficeWorkload.py  OperationsResponse.py  ProceedsResponse.py  RewardResponse.py  ShksShortage.py  __init__.py
wb-franchise-api-client/: api_auth.py  api_client.py
wb-franchise-api-client/models/: HistoryShortage.py  OperationsResponse.py
wb_franchise_api_client/: __init__.py  api_auth.py  api_client.py  api_config.py
wb_franchise_api_client/models/: AccountData.py  OfficeRate.py  RequestCodeResponse.py  ShortageResponse.py  TokenResponse.py  __init__.py
